--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0"?>
-<package>
-  <name>graspit_moveit_controller</name>
+<package format="1">
+  <name>curpp</name>
   <version>0.0.0</version>
   <description>Code for interfacing with Moveit! and Graspit! grasps using pick and place</description>
 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
+  <!-- Example:  -->
+  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="davidwatkins@cs.columbia.edu">David Watkins</maintainer>
 
+  <!-- One license tag required, multiple allowed, one license per tag -->
+  <!-- Commonly used license strings: -->
+  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
   <license>LGPLv3</license>
 
   <build_depend>roscpp</build_depend>
@@ -15,7 +21,6 @@
   <build_depend>rospy</build_depend>
   <build_depend>model_rec2</build_depend>
   <build_depend>geometry_msgs</build_depend>
-  <build_depend>graspit_msgs</build_depend>
   <build_depend>moveit_msgs</build_depend>
   <build_depend>actionlib</build_depend>
 
@@ -26,12 +31,15 @@
   <run_depend>rospy</run_depend>
   <run_depend>model_rec2</run_depend>
   <run_depend>geometry_msgs</run_depend>
-  <run_depend>graspit_msgs</run_depend>
   <run_depend>moveit_msgs</run_depend>
   <buildtool_depend>catkin</buildtool_depend>
   <run_depend>actionlib</run_depend>
 
+  <buildtool_depend>catkin</buildtool_depend>
+
+  <!-- The export tag contains other, unspecified, tags -->
   <export>
+    <!-- Other tools can request additional information be placed here -->
 
   </export>
 </package>
